# rust_app

./: Cargo.toml
src/: main.rs
src/routes/: health.rs  index.rs  mod.rs  users.rs
