[package]
name = "rust_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
utoipa = { version = "4.2.3", features = ["rocket_extras"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["rocket"] }
utoipa-redoc = { version = "4.0.0", features = ["rocket"] }
utoipa-rapidoc = { version = "4.0.0", features = ["rocket"] }
utoipa-scalar = { version = "0.1.0", features = ["rocket"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10.0"
log = "0.4"
